# qemu-camp-2026-k230

hw/adc/: Kconfig  meson.build  stm32f1xx_adc.c
hw/arm/: Kconfig  meson.build  stm32f103_board.c  stm32f103_soc.c
hw/gpio/: Kconfig  trace-events
hw/misc/: Kconfig  meson.build  stm32f1xx_rcc.c  trace-events
hw/riscv/: Kconfig  k230.c
include/hw/adc/: stm32f1xx_adc.h
include/hw/arm/: stm32f103_soc.h
include/hw/misc/: stm32f1xx_rcc.h
rust/: Cargo.toml
rust/hw/gpio/: Cargo.toml  Kconfig  meson.build
rust/hw/gpio/src/: bindings.rs  gpio.rs  lib.rs
rust/hw/gpio/tests/: tests.rs
tests/qtest/: meson.build  stm32f103_gpio-test.c
